--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,15 +1,4 @@
-<<<<<<< HEAD
-#Mon Aug 28 12:00:43 PDT 2017
-=======
-#Thu Jun 01 08:33:11 PDT 2017
->>>>>>> 9f1e829930e7e5e9c74d26aada5e19742dcd1e82
-distributionBase=GRADLE_USER_HOME
-distributionPath=wrapper/dists
+#Sun Nov 12 16:06:40 PST 2017
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-<<<<<<< HEAD
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
-=======
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.5-all.zip
-
->>>>>>> 9f1e829930e7e5e9c74d26aada5e19742dcd1e82
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
