--- a/opencv-java/build.gradle
+++ b/opencv-java/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.library'
-
 android {
-    compileSdkVersion 21
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 19
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         minSdkVersion 16
@@ -21,4 +20,6 @@ android {
     lintOptions {
         abortOnError false
     }
+}
+dependencies {
 }
