--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,14 @@
  */
 buildscript {
     repositories {
+        google()
         jcenter()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
+
+
     }
 }
 
